--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 .App {
   text-align: center;
+  
 }
-
+.triggerButton{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-self: center;
+  align-items: center;
+  margin-left: 15px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -22,6 +30,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
